crates/toml/tests/snapshots/invalid/table/duplicate-key-03.stderr
TOML parse error at line 4, column 3
  |
4 | [[fruit.apple]]
  |   ^^^^^^^^^^^
duplicate key
